# telegramgpt

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yml
infra/: main.tf  terraform.tfvars.example  variables.tf
scripts/: build_package.sh  ci.sh  delete_messages.sh  deploy.sh  destroy_infra.sh  get_private_chat_id.sh  local_lambda_test.sh  prod_lambda_test.sh  set_webhook.sh  setup_infra.sh  validate_openai_api_key.sh  watch.sh
src/: handler.rs  main.rs  utils.rs
src/handler/: bot.rs  config.rs  gpt.rs  messages_collection.rs  moderation.rs  request.rs  webhook.rs
src/handler/gpt/: message.rs  response.rs
src/handler/gpt/response/: choice.rs  content.rs  usage.rs
src/handler/gpt/response/choice/: content.rs
src/handler/messages_collection/: mongo.rs
src/handler/moderation/: request.rs  response.rs  result.rs
src/handler/webhook/: message.rs
src/handler/webhook/message/: chat.rs  user.rs
test_data/: update.json
